--- a/public/index.html
+++ b/public/index.html
@@ -15,19 +15,31 @@
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
+     <!-- Nav CSS -->
+     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+
+    <!-- Font Awesome Library from CDNJS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
 
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
-      <span>tweeter jjj</span>
+      <span>tweeter </span>
+      <div class="quote">
+        <p> <em>Write </em> a new tweet</p>
+        <i class="fa-solid fa-angles-down"></i>
+      </div>
     </nav>
 
+    
+    sadsad
     <!-- Page-specific (main) content here -->
     <main class="container"></main>
   </body>
