--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,9 @@
      <!-- Nav CSS -->
      <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
 
+     <!-- Header CSS -->
+     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -38,7 +41,15 @@
       </div>
     </nav>
 
-    
+    <header>
+      <div class="profile image">
+          <img src="/images/profile-hex.png"> 
+      </div>
+      <br>
+      <div class="name">
+          <h2>Your Name</h2>
+      </div>
+  </header>
     sadsad
     <!-- Page-specific (main) content here -->
     <main class="container"></main>
