--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
      <!-- Header CSS -->
      <link rel="stylesheet" href="/styles/header.css" type="text/css" />
 
+     <!-- New Tweet CSS -->
+     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -36,7 +39,7 @@
     <nav>
       <span>tweeter </span>
       <div class="quote">
-        <p> <em>Write </em> a new tweet</p>
+        <p class="quote-wording"> <em>Write </em> a new tweet</p>
         <i class="fa-solid fa-angles-down"></i>
       </div>
     </nav>
@@ -50,8 +53,22 @@
           <h2>Your Name</h2>
       </div>
   </header>
-    sadsad
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+      <section class="new-tweet">
+        <h2>Compose Tweet</h2>
+        <form method="post" action="/tweets">
+        <div class="input-top">
+          <label for="tweet-text">What are you humming about?</label>
+          <textarea name="text" id="tweet-text"></textarea>
+        </div>
+          <div class="input-bottom">
+            <button type="submit">Tweet</button>
+            <output name="counter" class="counter" for="tweet-text">140</output>
+          </div>
+        </form>
+      </section>
+    </main>
+
   </body>
 </html>
