add tweets dynamically with jquery from object database

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,9 @@
 
     <!-- Font Awesome Library from CDNJS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- Timeago Library from CDNJS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </head>
 
   <body>
@@ -79,26 +82,10 @@
       </section>
 
       <!-- List of Tweets -->
-      <section class="tweet">
-        <article>
-          <header class="tweet-header">
-            <div>Newton</div>
-            <div class="handle">@SirIssac</div>
-          </header>
-          <p>If I have seen further, it is by standing on the shoulders of giants</p>
-          <footer class="tweet-footer">
-            <div>Date</div>
-            <div class="icons">
-              <i class="fa-solid fa-flag"></i>
-              <i class="fa-solid fa-retweet"></i>
-              <i class="fa-solid fa-heart"></i>
-            </div>
-          </footer>
-        </article>
-      </section>
+        <div id="tweets">
 
-      <section class="tweet">
-        <article>
+        </div>
+        <!-- <article class="tweet">
           <header class="tweet-header">
             <div>Newton</div>
             <div class="handle">@SirIssac</div>
@@ -112,8 +99,9 @@
               <i class="fa-solid fa-heart"></i>
             </div>
           </footer>
-        </article>
-      </section>
+        </article> -->
+    
+
 
     </main>
 
