submit new tweet data to server and fetch tweets with jquery and ajax

--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
 
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form method="post" action="/tweets">
+        <form id="new-tweet-form" method="post" action="/tweets">
         <div class="input-top">
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
