--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
 
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
 
@@ -12,11 +14,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@1,300;1,600&display=swap" rel="stylesheet">
 
+    <!-- Nav CSS -->
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-
-     <!-- Nav CSS -->
-     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
 
      <!-- Header CSS -->
      <link rel="stylesheet" href="/styles/header.css" type="text/css" />
@@ -52,9 +54,10 @@
         <i class="fa-solid fa-angles-down"></i>
       </div>
     </nav>
-
-    <header class="profile-header">
-      <div class="profile image">
+  <div class="columns">
+    <div class="left-column">
+    <header class="profile-header mobile-transparent-top">
+      <div class="profile-image">
           <img src="/images/profile-hex.png"> 
       </div>
       <br>
@@ -62,6 +65,9 @@
           <h2>Your Name</h2>
       </div>
   </header>
+  </div>
+
+  <div class="right-column">
 
     <!-- Page-specific (main) content here -->
     <main class="container">
@@ -89,9 +95,10 @@
 
       <!-- List of Tweets -->
         <div id="tweets">
-
         </div>
     </main>
 
+  </div>
+</div>
   </body>
 </html>
