--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
       </div>
       <br>
       <div class="name">
-          <h2>Your Name</h2>
+          <h2>Melvin Adu</h2>
       </div>
   </header>
   </div>
@@ -93,7 +93,7 @@
       </div>
       </section>
 
-      <!-- List of Tweets -->
+      <!-- List of Tweets dynamically imported via JQuery -->
         <div id="tweets">
         </div>
     </main>
